tests/golden/expected/const_assign.stdout.txt
Compile error: tests/fixtures/const_assign.lamp:8: type error: cannot assign to const "answer"
  8 | 	answer = 7
    |  ^
